Added Swagger; Added Movies docs to Swagger; Added Makefile;

--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -75,6 +75,19 @@ services:
       timeout: 5s
       retries: 5
 
+  redis:
+    image: redis:alpine
+    container_name: redis
+    ports:
+      - "6379:6379"
+    networks:
+      - mynetwork
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+
   auth-service:
     build:
       context: ../auth-service
@@ -134,6 +147,8 @@ services:
       - ../api-gateway/.env
     depends_on:
       rabbitmq:
+        condition: service_healthy
+      redis:
         condition: service_healthy
     networks:
       - mynetwork
