--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'  # Убедитесь, что версия поддерживает нужные вам функции
-
 services:
   auth-db:
     image: postgres:15
@@ -54,6 +52,25 @@ services:
       - "5434:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  rating-db:
+    image: postgres:15
+    container_name: rating-db
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: hashhash
+      POSTGRES_DB: db
+    volumes:
+      - rating-db:/var/lib/postgresql/data
+    networks:
+      - mynetwork
+    ports:
+      - "5435:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -139,6 +156,23 @@ services:
       - "8083:8083"
     restart: unless-stopped
 
+  rating-service:
+    build:
+      context: ../rating-service
+    container_name: rating-service
+    env_file:
+      - ../rating-service/.env
+    depends_on:
+      rating-db:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+    networks:
+      - mynetwork
+    ports:
+      - "8084:8084"
+    restart: unless-stopped
+
   api-gateway-service:
     build:
       context: ../api-gateway
@@ -160,6 +194,7 @@ volumes:
   auth-db-data:
   movie-db-data:
   user-list-db:
+  rating-db:
 
 networks:
   mynetwork:
