--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -190,6 +190,17 @@ services:
       - "8080:8080"
     restart: unless-stopped
 
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.6.0
+    container_name: elasticsearch
+    environment:
+      - discovery.type=single-node
+    ports:
+      - "9200:9200"
+    networks:
+      - mynetwork
+
 volumes:
   auth-db-data:
   movie-db-data:
