--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -196,6 +196,8 @@ services:
     container_name: elasticsearch
     environment:
       - discovery.type=single-node
+      - xpack.security.enabled=false  # Отключение безопасности
+      - xpack.security.http.ssl.enabled=false  # Отключение SSL
     ports:
       - "9200:9200"
     networks:
