--- a/hikaya-frontend/package.json
+++ b/hikaya-frontend/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "vue-cli-service serve --port 8090"
   },
   "dependencies": {
+    "@vue/cli-service": "^5.0.8",
     "bootstrap": "^5.3.3",
+    "http-server": "^14.1.1",
     "vue": "^3.5.11",
     "vue-router": "^4.4.5",
     "vuex": "^4.1.0"
